--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+        <button>Submit</button>
       </div>
     </div>
     
